RESOLVED FIXED139299
In NetworkResourceLoader always bail out after abort()
https://bugs.webkit.org/show_bug.cgi?id=139299
Summary In NetworkResourceLoader always bail out after abort()
Antti Koivisto
Reported 2014-12-05 07:52:55 PST
It may kill the object.
Attachments
patch (5.73 KB, patch)
2014-12-05 08:46 PST, Antti Koivisto
no flags
Antti Koivisto
Comment 1 2014-12-05 08:46:42 PST
WebKit Commit Bot
Comment 2 2014-12-05 11:42:33 PST
Comment on attachment 242631 [details] patch Clearing flags on attachment: 242631 Committed r176858: <http://trac.webkit.org/changeset/176858>
WebKit Commit Bot
Comment 3 2014-12-05 11:42:37 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.