In NetworkResourceLoader always bail out after abort() https://bugs.webkit.org/show_bug.cgi?id=139299

Reviewed by Alexey Proskuryakov.

Invoking abort() may kill the current object. Take care to bail out after it.

* NetworkProcess/NetworkResourceLoader.cpp:
(WebKit::NetworkResourceLoader::didReceiveResponseAsync):
(WebKit::NetworkResourceLoader::didReceiveBuffer):
(WebKit::NetworkResourceLoader::didFinishLoading):

    Either make sure sendAbortingOnFailure() is called last in callbacks or the results is explicitly tested.

(WebKit::NetworkResourceLoader::bufferingTimerFired):
(WebKit::NetworkResourceLoader::sendBufferMaybeAborting):

    Rename and return a boolean to indicate if load should continue.

(WebKit::NetworkResourceLoader::sendBuffer): Deleted.
* NetworkProcess/NetworkResourceLoader.h:


Canonical link: https://commits.webkit.org/157159@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@176858 268f45cc-cd09-0410-ab3c-d52691b4dbfc